[gd_scene load_steps=11 format=3 uid="uid://bwskecom1crd6"]

[ext_resource type="Script" path="res://Scripts/chicken.gd" id="1_1x3ld"]
[ext_resource type="Texture2D" uid="uid://imwk8qe5d18u" path="res://Sprites/Chicken.png" id="2_v5gef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vdn12"]
atlas = ExtResource("2_v5gef")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqr18"]
atlas = ExtResource("2_v5gef")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s26cs"]
atlas = ExtResource("2_v5gef")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uep8l"]
atlas = ExtResource("2_v5gef")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwi1f"]
atlas = ExtResource("2_v5gef")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8krk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdn12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqr18")
}],
"loop": true,
"name": &"angry",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s26cs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uep8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwi1f")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_77bnc"]
radius = 1.0
height = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a07w5"]
radius = 6.0

[node name="Chicken" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_1x3ld")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -8)
sprite_frames = SubResource("SpriteFrames_f8krk")
animation = &"angry"
frame_progress = 0.214774

[node name="Rest" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Walk" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.420448, -0.578115)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_77bnc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_a07w5")

[node name="EggSpawner" type="Node2D" parent="."]
position = Vector2(3, -3)

[connection signal="timeout" from="Rest" to="." method="_on_rest_timeout"]
[connection signal="timeout" from="Walk" to="." method="_on_walk_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
